fix(client): wrap messages

--- a/client/src/components/Message.css
+++ b/client/src/components/Message.css
@@ -6,6 +6,8 @@
 
 .message-container .message {
   font-family: "Open Sans";
+  white-space: pre-line;
+  word-wrap: break-word;
   font-size: 0.9rem;
 }
 
